[package]
name = "arc-cli"
description = "CLI binary for the ARC runtime kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
default-run = "arc"
autobins = false

[[bin]]
name = "arc"
path = "src/bin/arc.rs"

[dependencies]
arc-appraisal = { package = "arc-appraisal", path = "../arc-appraisal" }
arc-api-protect = { package = "arc-api-protect", path = "../arc-api-protect" }
arc-control-plane = { package = "arc-control-plane", path = "../arc-control-plane" }
arc-acp-proxy = { package = "arc-acp-proxy", path = "../arc-acp-proxy" }
arc-core = { package = "arc-core", path = "../arc-core" }
arc-credentials = { package = "arc-credentials", path = "../arc-credentials" }
arc-did = { package = "arc-did", path = "../arc-did" }
arc-federation = { package = "arc-federation", path = "../arc-federation" }
arc-hosted-mcp = { package = "arc-hosted-mcp", path = "../arc-hosted-mcp" }
arc-kernel = { package = "arc-kernel", path = "../arc-kernel" }
arc-guards = { package = "arc-guards", path = "../arc-guards" }
arc-listing = { package = "arc-listing", path = "../arc-listing" }
arc-policy = { package = "arc-policy", path = "../arc-policy" }
arc-mcp-adapter = { package = "arc-mcp-adapter", path = "../arc-mcp-adapter" }
arc-conformance = { package = "arc-conformance", path = "../arc-conformance" }
arc-reputation = { package = "arc-reputation", path = "../arc-reputation" }
arc-store-sqlite = { package = "arc-store-sqlite", path = "../arc-store-sqlite" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
axum = "0.8"
async-stream = "0.3"
url = "2"
percent-encoding = "2"
base64 = "0.22"
reqwest = { workspace = true, features = ["blocking", "form", "json", "query", "rustls"] }
ureq = { version = "2.10", features = ["json"] }
serde_urlencoded = "0.7"
rusqlite = { workspace = true }
arc-siem = { package = "arc-siem", path = "../arc-siem", optional = true }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
chrono = { version = "0.4", features = ["clock"] }
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
arc-wasm-guards = { package = "arc-wasm-guards", path = "../arc-wasm-guards", features = ["wasmtime-runtime"] }
wasmparser = "0.221"
flate2 = "1"
tar = "0.4"

[dev-dependencies]
arc-credit = { package = "arc-credit", path = "../arc-credit" }
arc-open-market = { package = "arc-open-market", path = "../arc-open-market" }
arc-underwriting = { package = "arc-underwriting", path = "../arc-underwriting" }
tempfile = "3"

[features]
siem = ["arc-siem"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
