[package]
name = "arc-config"
description = "Unified arc.yaml configuration loader for the ARC runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
regex = "1"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
