[package]
name = "arc-conformance"
description = "Scenario loading and report generation for ARC cross-language conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "arc_conformance"

[[bin]]
name = "arc-conformance-report"
path = "src/bin/arc_conformance_report.rs"

[[bin]]
name = "arc-conformance-runner"
path = "src/bin/arc_conformance_runner.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "form", "query", "rustls"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
