[package]
name = "arc-conformance"
description = "Scenario loading and report generation for ARC cross-language conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "arc_conformance"

[[bin]]
name = "arc-conformance-report"
path = "src/bin/arc_conformance_report.rs"

[[bin]]
name = "arc-conformance-runner"
path = "src/bin/arc_conformance_runner.rs"

[[bin]]
name = "arc-native-conformance-runner"
path = "src/bin/arc_native_conformance_runner.rs"

[[bin]]
name = "arc-native-conformance-fixture"
path = "src/bin/arc_native_conformance_fixture.rs"

[dependencies]
arc-core = { package = "arc-core-types", path = "../arc-core-types" }
arc-kernel = { package = "arc-kernel", path = "../arc-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "form", "query", "rustls"] }
tiny_http = "0.12"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
