[package]
name = "arc-core"
description = "Core types for the ARC (Attested Rights Channel) protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "arc_core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
ryu = { workspace = true }
sha2 = { workspace = true }
percent-encoding = "2"
url = "2"

[dev-dependencies]
serde_json = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
