[package]
name = "arc-credentials"
description = "Portable ARC reputation credentials and Agent Passport verification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "arc_credentials"

[dependencies]
arc-core = { package = "arc-core", path = "../arc-core" }
arc-did = { package = "arc-did", path = "../arc-did" }
arc-reputation = { package = "arc-reputation", path = "../arc-reputation" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
base64 = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
sha2 = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
