[package]
name = "arc-cross-protocol"
description = "Shared cross-protocol bridge contracts and orchestrator runtime for ARC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "arc_cross_protocol"

[dependencies]
arc-core = { package = "arc-core-types", path = "../arc-core-types" }
arc-kernel = { package = "arc-kernel", path = "../arc-kernel" }
arc-manifest = { package = "arc-manifest", path = "../arc-manifest" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
