[package]
name = "arc-data-guards"
description = "Data layer guards for the ARC runtime kernel (SQL, vector DB, warehouse cost)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "arc_data_guards"

[dependencies]
arc-core = { package = "arc-core", path = "../arc-core" }
arc-kernel = { package = "arc-kernel", path = "../arc-kernel" }
arc-guards = { package = "arc-guards", path = "../arc-guards" }
arc-metering = { package = "arc-metering", path = "../arc-metering" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1"
sqlparser = "0.61"

[dev-dependencies]
serde_json = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
