[package]
name = "arc-envoy-ext-authz"
description = "Envoy ext_authz gRPC adapter that bridges external authorization checks to the ARC kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "arc_envoy_ext_authz"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["transport"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
