[package]
name = "arc-external-guards"
description = "HTTP-backed external guard adapters for ARC guard pipelines"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "arc_external_guards"

[dependencies]
arc-guards = { path = "../arc-guards" }
arc-core-types = { path = "../arc-core-types" }
arc-kernel = { path = "../arc-kernel" }
async-trait = "0.1"
base64 = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
