[package]
name = "arc-federation"
description = "ARC federation quorum, admission, and reputation-clearing contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "arc_federation"

[dependencies]
arc-core-types = { path = "../arc-core-types" }
arc-listing = { path = "../arc-listing" }
arc-open-market = { path = "../arc-open-market" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
