[package]
name = "arc-governance"
description = "ARC generic governance charters and case evaluation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "arc_governance"

[dependencies]
arc-core-types = { path = "../arc-core-types" }
arc-listing = { path = "../arc-listing" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
