[package]
name = "arc-guard-sdk"
description = "Guest-side SDK for writing ARC WASM guards"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "arc_guard_sdk"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
